# xy-rpc

./: .gitignore  Cargo.toml  LICENSE-MIT  README-zh.md  README.md  foo.md
.github/workflows/: ci.yml
crates/xy-rpc-macro/: Cargo.toml
crates/xy-rpc-macro/src/: lib.rs
examples/: axum_example.rs  compio_example.rs  custom_serde_format.rs  stream_example.rs
examples/bidirectional_rpc_example/: acceptor.rs  connector.rs  proto.rs
examples/unidirectional_rpc_example/: caller.rs  proto.rs  service.rs
examples/wasm_play/: Cargo.toml
examples/wasm_play/src/: lib.rs
src/: axum.rs  channel.rs  channel_builder.rs  compio.rs  duplex.rs  formats.rs  frame.rs  future_stream_with_sender.rs  handle_rpc.rs  lib.rs  maybe_send.rs  read_stream.rs  temp_buf.rs  tokio.rs  transport.rs  web.rs
tests/: cancellation.rs  channel.rs  duplex.rs  macros.rs
xtask/src/: main.rs
