[workspace]
resolver = "3"
members = [
    "crates/xy-rpc-macro",
    "xtask",
    #    "examples/wasm_play"
    #    "examples/*"
]

[package]
name = "xy-rpc"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "An RPC framework for Rust"
license = "MIT"
repository = "https://github.com/ycysdf/xy-rpc"
documentation = "https://docs.rs/xy-rpc"
readme = "README.md"
keywords = ["rpc", "async", "serde", "tokio", "wasm"]
categories = ["asynchronous", "network-programming", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
features = ["rt_tokio", "format_json", "axum", "duplex", "stream"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "format_json"]
std = []
rt_tokio_without_send_sync = ["std", "dep:tokio", "dep:tokio-util"]
rt_tokio = ["rt_tokio_without_send_sync", "send_sync"]
axum = ["rt_tokio", "dep:axum", "dashmap"]

rt_compio = ["std", "dep:compio"]
format_json = ["dep:serde_json"]
format_message_pack = ["dep:rmp-serde"]
duplex = ["rt_tokio_without_send_sync"]
send_sync = []
stream = []
tracing_live = ["dep:tracing-lv-track"]


[dependencies]
futures-util = { version = "0.3", features = ["sink", "io", "futures-macro", "async-await-macro"], default-features = false }
serde = { version = "1", features = ["derive"] }
flume = { version = "0.12", features = ["async"], default-features = false }
futures-channel = { version = "0.3", features = ["alloc"], default-features = false }
auto_enums = "0.8"
derive_more = { version = "2", features = ["full"] }
bit_field = "0.10"
bytes = { version = "1.11", features = ["serde"] }
xy-rpc-macro = { path = "crates/xy-rpc-macro", version = "0.2.0" }
tracing = "0.1"
portable-atomic = { version = "1.13" }
pin-project = "1"
compio = { version = "0.18", optional = true, default-features = false, features = ["io-compat", "net"] }
try-specialize = { version = "0.1" }
hashbrown = { version = "0.16" }
modular-bitfield = { version = "0.13", features = [] }

serde_json = { version = "1", features = ["std"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "net", "io-util"], default-features = false, optional = true }
tokio-util = { version = "0.7", features = ["compat"], default-features = false, optional = true }
axum = { version = "0.8", features = [], default-features = false, optional = true }
dashmap = { version = "6", optional = true }
rmp-serde = { version = "1.3", optional = true }
tracing-lv-track = { path = "../tracing-live/libs/track", optional = true }
#erased-serde = "0.4"
uuid = { version = "1", features = ["v4", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ts-rs = "10"
tower = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http"], default-features = false }
js-sys = { version = "0.3", default-features = false }
web-sys = { version = "0.3", features = ["ReadableStream", "WritableStream", "WritableStreamDefaultWriter", "TransformStream", "TransformStreamDefaultController"], default-features = false }
wasm-bindgen = { version = "0.2.100", default-features = false, features = ["serde-serialize", "serde"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }
wasm-streams = { version = "0.4", default-features = false }
pin-project = "1"

[dev-dependencies]
#tsify = { version = "0.5" }
dashmap = "6.1"
axum = { version = "0.8", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["io"], default-features = false }
tokio = { version = "1", features = ["full"] }
#xy-rpc = { path = ".", features = ["rt_tokio_without_send_sync", "axum", "format_json", "format_message_pack", "duplex", "tracing_live"] }
#tracing-lv = { path = "../tracing-live/libs/client" }
tower-http = { version = "0.6", features = ["cors"] }
compio = { version = "0.18", features = ["macros", "time"] }
bincode = { version = "1.3", features = [] }


[[example]]
name = "unidirectional_rpc_example_caller"
path = "examples/unidirectional_rpc_example/caller.rs"
required-features = ["rt_tokio", "format_json"]

[[example]]
name = "unidirectional_rpc_example_service"
path = "examples/unidirectional_rpc_example/service.rs"
required-features = ["rt_tokio", "format_json"]


[[example]]
name = "bidirectional_rpc_example_connector"
path = "examples/bidirectional_rpc_example/connector.rs"
required-features = ["rt_tokio", "format_json"]


[[example]]
name = "bidirectional_rpc_example_acceptor"
path = "examples/bidirectional_rpc_example/acceptor.rs"
required-features = ["rt_tokio", "format_json"]

[[example]]
name = "compio_example"
path = "examples/compio_example.rs"
required-features = ["rt_compio"]

[[example]]
name = "axum"
path = "examples/axum_example.rs"
required-features = ["rt_tokio", "format_json", "axum", "send_sync"]

[[example]]
name = "custom_serde_format"
path = "examples/custom_serde_format.rs"
required-features = ["rt_tokio", "format_json", "duplex"]

[[example]]
name = "stream_example"
path = "examples/stream_example.rs"
required-features = ["rt_tokio", "format_json", "duplex"]
