[package]
name = "xy-rpc-macro"
version = "0.1.0"
edition = "2024"
description = "An RPC framework for Rust"
license = "MIT"
repository = "https://github.com/ycysdf/xy-rpc"

[lib]
proc-macro = true

[dependencies]

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.7"
either = "1"