[package]
name = "wasm_play"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-net = { version = "0.6", features = ["http"], default-features = false }
js-sys = { version = "0.3", default-features = false }
web-sys = { version = "0.3", features = ["ReadableStream", "WritableStream", "WritableStreamDefaultWriter", "TransformStream", "TransformStreamDefaultController"], default-features = false }
wasm-bindgen = { version = "0.2.100", default-features = false, features = ["serde-serialize", "serde"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }
wasm-streams = { version = "0.4", default-features = false }
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["std"], default-features = false }

xy-rpc = { path = "../../" }