[package]
name = "wasm_play"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tsify = { version = "0.5" }
gloo-net = { version = "0.6", features = ["http"], default-features = false }
js-sys = { version = "0.3", default-features = false }
web-sys = { version = "0.3", features = ["ReadableStream", "console", "WritableStream", "WritableStreamDefaultWriter", "TransformStream", "TransformStreamDefaultController"], default-features = false }
wasm-bindgen = { version = "0.2.100", default-features = false, features = ["serde-serialize", "serde"] }
wasm-bindgen-futures = { version = "0.4", features = ["futures-core-03-stream"], default-features = false }
wasm-streams = { version = "0.4", default-features = false }
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["std"], default-features = false }
bytes = "1"
xy-rpc = { path = "../../", features = ["format_json"] }
futures-util = { version = "0.3", features = ["sink", "io", "futures-macro", "async-await-macro"], default-features = false }
